# python-dependabot-test-repo

./: pyproject.toml  requirements.txt  setup.py
src/: main.py
