[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "endor-dependabot-python-repro"
version = "0.1.0"
description = "Minimal repo to reproduce Endor dependabot Python 3.8 issues"
requires-python = ">=3.8,<3.9"
dependencies = [
    "Flask==2.1.2",
    "PyYAML==5.1",
    "cryptography==37.0.2",
    "requests==2.32.5",
]
